Incluida la clase SnakeObject
Creacion de la clase de serpiente para construir el juego

--- a/Snake/Pages/_Host.cshtml
+++ b/Snake/Pages/_Host.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/"
-@namespace Snake.Pages
+@namespace SnakeObject.Pages
+@using Snake
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
