MapObject : Creada clase MapObject, referente al nivel del videojuego Creada propiedad Size, referente al tamaño del mapa en px. Creados constructor con parámetros y constructor vacío.
Index :
Añadido formulario simple en el que se pueda modificar el tamaño del mapa.

--- a/Snake/Pages/Index.razor
+++ b/Snake/Pages/Index.razor
@@ -3,3 +3,13 @@
 <h1>Snake</h1>
 
 Welcome to your new app.
+
+<EditForm Model="@mapa"> @* Form simple para que el usuario pueda establecer el tamaño del mapa *@
+    Tamaño del mapa : <InputNumber @bind-Value="@mapa.Size" />
+    
+    <button type="submit" class="btn btn-primary btn-block confirm-button">Establecer</button>
+</EditForm>
+
+@code{
+    private MapObject mapa = new();
+}
