Props : Editadas propiedades X e Y en PosX y PosY para indicar la posición inicial del prop. Añadidas propiedades SizeX y SizeY para indicar el tamaño en píxeles del prop.
Modificadas clases SnakeObject y AppleObject correspondientemente a estos últimos cambios realizados.

--- a/Snake/Pages/Index.razor
+++ b/Snake/Pages/Index.razor
@@ -11,5 +11,7 @@ Welcome to your new app.
 </EditForm>
 
 @code{
-    private MapObject mapa = new();
+    private MapObject mapa = new(); // Primero el mapa se creará en su tamaño por defecto, 400px
+
+
 }
