--- a/Snake/Pages/Index.razor
+++ b/Snake/Pages/Index.razor
@@ -3,13 +3,13 @@
 <h1>Snake</h1>
 
 Welcome to the Snake game. <br/>
+
+@* Creo un div con estilos y el mismo tamaño que le damos al mapa *@
 <div style="background-color:grey;width:@(mapa.Size)px;height:@(mapa.Size)px; display:inline-block; border:2px solid black;">
 </div>
 
 <EditForm Model="@mapa"> @* Form simple para que el usuario pueda establecer el tamaño del mapa *@
     Tamaño del mapa : <InputNumber @bind-Value="@mapa.Size" />
-    
-    <button type="submit" class="btn btn-primary btn-block confirm-button">Establecer</button>
 </EditForm>
 
 @code{
