--- a/Snake/Pages/Index.razor
+++ b/Snake/Pages/Index.razor
@@ -9,7 +9,13 @@ Welcome to the Snake game. <br/>
 </div>
 
 <EditForm Model="@mapa"> @* Form simple para que el usuario pueda establecer el tamaño del mapa *@
-    Tamaño del mapa : <InputNumber @bind-Value="@mapa.Size" />
+    <DataAnnotationsValidator></DataAnnotationsValidator> @* Añado el validador del formulario *@
+
+    Tamaño del mapa : <InputNumber @bind-Value="@mapa.Size" /> @* Para introducir el valor del tamaño del mapa *@
+    @* Muestro justo debajo, el mensaje de error si el tamaño del mapa está fuera del rango *@
+    <ValidationMessage For="@(()=>mapa.Size)"/>
+
+    <ValidationSummary/> @* Esta etiqueta hará que se muestre una lista de errores en el form *@
 </EditForm>
 
 @code{
