--- a/Snake/Pages/Index.razor
+++ b/Snake/Pages/Index.razor
@@ -5,7 +5,7 @@
 Welcome to the Snake game. <br/>
 
 @* Creo un div con estilos y el mismo tamaño que le damos al mapa *@
-<div style="background-color:grey;width:@(_mapSize)px;height:@(_mapSize)px; display:inline-block; border:2px solid black;">
+<div style="background-color:grey;width:@(_mapSize)px;height:@(_mapSize)px; display:inline-block; border:5px solid red;">
 </div>
 
 <EditForm Model="@mapa" OnValidSubmit="MapOnValidSubmit" OnInvalidSubmit="MapOnInvalidSubmit"> @* Form simple para que el usuario pueda establecer el tamaño del mapa *@
@@ -18,13 +18,12 @@ Welcome to the Snake game. <br/>
 
 @code{
     private static MapObject mapa = new(); // Primero el mapa se creará en su tamaño por defecto, 400px
-
     private int @_mapSize = mapa.Size; // Al inicio de la página establezco el tamaño del contenero al tamaño del mapa
 
     
     private void MapOnInvalidSubmit() // En el caso de que el usuario haya introducido un valor inválido
     {
-        mapa.Size = _mapSize; // Vuelvo a establecer el valor del tamaño del mapa a uno válido
+        mapa.Size = _mapSize; // Vuelvo a establecer el valor del tamaño del mapa al último escrito válido
     }
 
     private void MapOnValidSubmit() // En el caso de que el valor introducido sea uno válido
