--- a/Snake/Shared/MainLayout.razor
+++ b/Snake/Shared/MainLayout.razor
@@ -1,10 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
+@*    <div class="sidebar">
         <NavMenu />
     </div>
-
+*@
     <div class="main">
         <div class="content px-4">
             @Body
