Modificado el color del borde del contenedor a darkred

--- a/Snake/Pages/Index.razor
+++ b/Snake/Pages/Index.razor
@@ -5,7 +5,7 @@
 Welcome to the Snake game. <br/>
 
 @* Creo un div con estilos y el mismo tamaño que le damos al mapa *@
-<div style="background-color:grey;width:@(_mapSize)px;height:@(_mapSize)px; display:inline-block; border:5px solid red;">
+<div style="background-color:grey;width:@(_mapSize)px;height:@(_mapSize)px; display:inline-block; border:5px solid darkred;">
 </div>
 
 <EditForm Model="@mapa" OnValidSubmit="MapOnValidSubmit" OnInvalidSubmit="MapOnInvalidSubmit"> @* Form simple para que el usuario pueda establecer el tamaño del mapa *@
