Index : Añadido un generador de números aleatorios para la posición en la que aparecerá la manzana Añadido un objeto AppleObject referente a la manzana que vamos a mostrar

--- a/Snake/Pages/Index.razor
+++ b/Snake/Pages/Index.razor
@@ -21,7 +21,6 @@ Welcome to the Snake game. <br/>
     private static MapObject mapa = new(); // Primero el mapa se creará en su tamaño por defecto, 400px
     private int @_mapSize = mapa.Size; // Al inicio de la página establezco el tamaño del contenero al tamaño del mapa
 
-    
     private void MapOnInvalidSubmit() // En el caso de que el usuario haya introducido un valor inválido
     {
         mapa.Size = _mapSize; // Vuelvo a establecer el valor del tamaño del mapa al último escrito válido
@@ -31,4 +30,9 @@ Welcome to the Snake game. <br/>
     {
         _mapSize = mapa.Size; // Actualizo la variable a ese valor y por lo tanto, se actualizará el tamaño del mapa
     }
+
+
+    private static Random rnd = new(); // Un generador de números aleatorios
+    // Creo una instancia del objeto AppleObject llamando a su constructor y metiéndole parámetros
+    private AppleObject manzana = new(rnd.Next(1, mapa.Size), rnd.Next(1, mapa.Size), "red");
 }
