--- a/Snake/Pages/Index.razor
+++ b/Snake/Pages/Index.razor
@@ -8,6 +8,8 @@ Welcome to the Snake game. <br/>
 <div @ref="Mapa" style="background-color:grey;width:@(_mapSize)px;height:@(_mapSize)px; display:inline-block; border:5px solid darkred;">
 </div>
 
+<br />
+
 @* Botón para que el usuario pueda iniciar o finalizar la partida *@
 <button @ref="BotonIniciar" class="btn btn-primary">@_textoBotonIniciar</button>
 
@@ -25,8 +27,9 @@ Welcome to the Snake game. <br/>
     // Referencias a los elementos del mapa y el botón para iniciar o parar la partida
     private ElementReference Mapa;
     private ElementReference BotonIniciar;
-
-    protected override void OnAfterRender(bool firstRender) // Se ejecuta cada vez que se refresque el DOM
+    
+    // Acciones a realizar cada vez que se refresque el DOM y se renderice la página
+    protected override void OnAfterRender(bool firstRender)
     {
         if (firstRender) // La primera vez que se renderice :
         {
