--- a/Snake/Pages/Index.razor
+++ b/Snake/Pages/Index.razor
@@ -21,12 +21,20 @@ Welcome to the Snake game. <br/>
     @* Muestro justo debajo, el mensaje de error si el tamaño del mapa está fuera del rango *@
     <ValidationMessage For="@(()=>mapa.Size)"/>
 </EditForm>
+<EditForm Model="@snake" OnValidSubmit="SnakeOnValidSubmit" OnInvalidSubmit="SnakeOnInvalidSubmit">
+    <DataAnnotationsValidator></DataAnnotationsValidator> @* Añado el validador del formulario *@
+
+    Nivel de dificultad : <InputNumber @bind-Value="@snake.Dificultad" /> @* Para introducir el valor del tamaño del mapa *@
+    @* Muestro justo debajo, el mensaje de error si el tamaño del mapa está fuera del rango *@
+    <ValidationMessage For="@(()=>snake.Dificultad)"/>
+</EditForm>
 
 
 @code{
     // Referencias a los elementos del mapa y el botón para iniciar o parar la partida
     private ElementReference Mapa;
     private ElementReference BotonIniciar;
+    
     
     // Acciones a realizar cada vez que se refresque el DOM y se renderice la página
     protected override void OnAfterRender(bool firstRender)
