--- a/Snake/Pages/Index.razor
+++ b/Snake/Pages/Index.razor
@@ -13,6 +13,7 @@ Welcome to the Snake game. <br/>
 @* Botón para que el usuario pueda iniciar o finalizar la partida *@
 <button @ref="BotonIniciar" class="btn btn-primary">@_textoBotonIniciar</button>
 
+
 @* Form simple para que el usuario pueda establecer el tamaño del mapa *@
 <EditForm Model="@mapa" OnValidSubmit="MapOnValidSubmit" OnInvalidSubmit="MapOnInvalidSubmit">
     <DataAnnotationsValidator></DataAnnotationsValidator> @* Añado el validador del formulario *@
@@ -26,8 +27,8 @@ Welcome to the Snake game. <br/>
 <EditForm Model="@snake" OnValidSubmit="SnakeOnValidSubmit" OnInvalidSubmit="SnakeOnInvalidSubmit">
     <DataAnnotationsValidator></DataAnnotationsValidator> @* Añado el validador del formulario *@
 
-    Nivel de dificultad : <InputNumber @bind-Value="@snake.Dificultad" /> @* Para introducir el valor del tamaño del mapa *@
-    @* Muestro justo debajo, el mensaje de error si el tamaño del mapa está fuera del rango *@
+    Nivel de dificultad : <InputNumber @bind-Value="@snake.Dificultad" /> @* Para introducir la dificultad *@
+    @* Muestro justo debajo, el mensaje de error si el nivel de dificultad está fuera del rango *@
     <ValidationMessage For="@(()=>snake.Dificultad)"/>
 </EditForm>
 
@@ -37,7 +38,7 @@ Welcome to the Snake game. <br/>
     private ElementReference Mapa;
     private ElementReference BotonIniciar;
     
-    // Acciones a realizar cada vez que se refresque el DOM y se renderice la página
+    /// <summary> Acciones a realizar cada vez que se refresque el DOM y se renderice la página </summary>
     protected override void OnAfterRender(bool firstRender)
     {
         if (firstRender) // La primera vez que se renderice :
