--- a/Snake/Pages/Index.razor
+++ b/Snake/Pages/Index.razor
@@ -2,16 +2,19 @@
 
 <h1>Snake</h1>
 
-Welcome to the Snake game. <br/>
+Welcome to the Snake game. 
+
+<br/>
 
 @* Creo un div con estilos y el mismo tamaño que le damos al mapa *@
-<div @ref="Mapa" style="background-color:grey;width:@(_mapSize)px;height:@(_mapSize)px; display:inline-block; border:5px solid darkred;">
-
-  
-
-
-
-
+<div @ref="Mapa" style="background-color:grey;width:@(_mapSize*10)px;height:@(_mapSize*10)px; display:inline-block; border:5px solid darkred;">
+    @for (var i = 0; i < mapa.Casillas.GetLength(0); i++)
+    {
+        for (var j = 0; j < mapa.Casillas.GetLength(1); j++)
+       {
+           <div style="width:10px;height:10px;border:1px solid yellow;display:inline-block;margin:0px;padding:0px;"></div>
+       }
+    }
 </div>
 
 <br />
@@ -24,7 +27,7 @@ Welcome to the Snake game. <br/>
 <EditForm Model="@mapa" OnValidSubmit="MapOnValidSubmit" OnInvalidSubmit="MapOnInvalidSubmit">
     <DataAnnotationsValidator></DataAnnotationsValidator> @* Añado el validador del formulario *@
 
-    Tamaño del mapa : <InputNumber @bind-Value="@mapa.Size" /> @* Para introducir el valor del tamaño del mapa *@
+    Tamaño del mapa en casillas : <InputNumber @bind-Value="@mapa.Size" /> @* Para introducir el valor del tamaño del mapa *@
     @* Muestro justo debajo, el mensaje de error si el tamaño del mapa está fuera del rango *@
     <ValidationMessage For="@(()=>mapa.Size)"/>
 </EditForm>
