--- a/Snake/Pages/Index.razor
+++ b/Snake/Pages/Index.razor
@@ -7,12 +7,12 @@ Welcome to the Snake game.
 <br/>
 
 @* Creo un div con estilos y el mismo tamaño que le damos al mapa *@
-<div @ref="Mapa" style="background-color:grey;width:@(_mapSize*10)px;height:@(_mapSize*10)px; display:inline-block; border:5px solid darkred;">
+<div @ref="Mapa" style="background-color:grey;width:@(_mapSize*10)px;height:@(_mapSize*10)px; display:block; border:5px solid darkred;">
     @for (var i = 0; i < mapa.Casillas.GetLength(0); i++)
     {
         for (var j = 0; j < mapa.Casillas.GetLength(1); j++)
        {
-           <div style="width:10px;height:10px;border:1px solid yellow;display:inline-block;margin:0px;padding:0px;"></div>
+           <div style="width:10px;height:10px;border:1px solid yellow;float:left;margin:0px;padding:0px;"></div>
        }
     }
 </div>
