Index : Eliminado el borde amarillo de los divs pequeños
SnakeObject :
Añadido parámetro al constructor referente al tamaño del mapa, y establecida su posición inicial en el centro de éste

--- a/Snake/Pages/Index.razor
+++ b/Snake/Pages/Index.razor
@@ -12,7 +12,7 @@ Welcome to the Snake game.
     {
         for (var j = 0; j < mapa.Casillas.GetLength(1); j++)
        {
-           <div style="width:10px;height:10px;border:1px solid yellow;float:left;margin:0px;padding:0px;"></div>
+           <div style="width:10px;height:10px;float:left;margin:0px;padding:0px;"></div>
        }
     }
 </div>
