--- a/Snake/Pages/Index.razor
+++ b/Snake/Pages/Index.razor
@@ -33,7 +33,7 @@ Welcome to the Snake game.
 <br />
 
 @* Botón para que el usuario pueda iniciar o finalizar la partida *@
-<button @ref="BotonIniciar" class="btn btn-primary">@_textoBotonIniciar</button>
+<button @ref="BotonIniciar" @onclick="()=>startGame(snake,manzana)" class="btn btn-primary">@_textoBotonIniciar</button>
 
 
 @* Form simple para que el usuario pueda establecer el tamaño del mapa *@
